# gamma-scope

./: .dockerignore  .gitignore  LICENSE  NEXT_AGENT_README.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/api/: Dockerfile  pyproject.toml
apps/api/gammascope_api/: auth.py  fixtures.py  main.py
apps/api/gammascope_api/analytics/: __init__.py  black_scholes.py  scenario.py
apps/api/gammascope_api/experimental/: distribution.py  forward.py  iv_methods.py  models.py  quality.py  service.py  trade_maps.py
apps/api/gammascope_api/experimental_flow/: estimator.py  (+1 more)
apps/api/tests/: replay_parquet_fixtures.py  test_black_scholes.py  test_contract_endpoints.py  test_experimental_distribution.py  test_experimental_flow_estimator.py  test_experimental_flow_routes.py  test_experimental_flow_service.py  test_experimental_forward.py  test_experimental_iv_methods.py  test_experimental_quality.py  test_experimental_routes.py  test_experimental_service.py  test_experimental_trade_maps.py  test_generated_contracts.py  test_heatmap_exposure.py  test_heatmap_nodes.py  test_heatmap_repository.py  test_heatmap_route.py  test_heatmap_service.py  test_hosted_replay_mode.py  test_latest_state_cache.py  test_live_snapshot_service.py  test_parquet_import_reader.py  test_private_mode.py  test_replay_capture.py  test_replay_import_real_files.py  test_replay_import_repository.py  test_replay_import_routes.py  test_replay_import_snapshot.py  test_replay_persistence.py  test_retention_cleanup.py  test_saved_views_persistence.py  test_stream_endpoint.py
(+269 files in other folders)
