[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gammascope-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "psycopg[binary]>=3.2",
  "pyarrow>=16",
  "pydantic>=2.8",
  "python-multipart>=0.0.22",
  "redis>=5.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "datamodel-code-generator>=0.26",
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gammascope_api*"]
